src/objects/Slot_Information__c.object
<CustomObject>
    <fields>
        <fullName>Aggregate_Recommendation_w_Allowance__c</fullName>
        <label>Aggregate Recommendation w/Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aggregate_Recommendation_w_o_Allowance__c</fullName>
        <label>Aggregate Recommendation w/o Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_w_Allowance__c</fullName>
        <label>Recommended w/ Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_w_o_Allowance__c</fullName>
        <label>Recommended w/o Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_w_Allowance__c</fullName>
        <label>Requested w/ Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_w_o_Allowance__c</fullName>
        <label>Requested w/o Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Slot_Type__c</fullName>
        <label>Slot Type</label>
        <picklist>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Slot__c</fullName>
        <label>Slot</label>
        <referenceTo>Slot__c</referenceTo>
        <relationshipLabel>Slot Information</relationshipLabel>
        <relationshipName>Slot_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Slot Information</label>
    <nameField>
        <displayFormat>SI-{000000}</displayFormat>
        <label>Slot Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slot Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>